objects/SFDocumentor__Report_Collection__c.object
<CustomObject>
    <description>This object will store all reports present in org</description>
    <fields>
        <fullName>SFDocumentor__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Folder_Name__c</fullName>
        <description>This will store name of folder in which report is present</description>
        <label>Folder Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Last_Sync_Date__c</fullName>
        <label>Last SFDoc Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link_URL__c</fullName>
        <formula>HYPERLINK( SFDocumentor__Url__c , SFDocumentor__Report_API_Name__c ,&apos;_Blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Setup Link/URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Report_API_Name__c</fullName>
        <description>This will store API name of report</description>
        <externalId>true</externalId>
        <label>Report API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Report_Format__c</fullName>
        <label>Report Format</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Report_Id__c</fullName>
        <label>Report Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Report_Last_Run_Date__c</fullName>
        <description>This field will store the date and time  when report run last time</description>
        <label>Report Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Report_Last_Viewed_Date__c</fullName>
        <label>Report Last Viewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Report_OwnerId__c</fullName>
        <label>Report OwnerId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__SFDocumentorDesc__c</fullName>
        <label>SFDoc Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Test_Field_For_Report__c</fullName>
        <label>Test Field For  Report</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Total_Records__c</fullName>
        <label>Total Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Report Collection</label>
    <listViews>
        <fullName>SFDocumentor__All</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__Report_API_Name__c</columns>
        <columns>SFDocumentor__Description__c</columns>
        <columns>SFDocumentor__Total_Records__c</columns>
        <columns>SFDocumentor__Report_Format__c</columns>
        <columns>SFDocumentor__Folder_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Report Collection  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>